fixes to admoniton block's dark mode

--- a/frontend/src/routes/_base.sass
+++ b/frontend/src/routes/_base.sass
@@ -4,6 +4,9 @@
 // Light colors
 //
 
+$blue: #4285f4
+$yellow: #fbbc04
+$red: #ea4335
 $green: #34a853
 
 $text-color: rgba(0, 0, 0, .84)
@@ -20,13 +23,21 @@ $code-bg-color: #eff8ff
 $code-title-color: lighten($code-bg-color, 1%)
 $code-border-color: darken($code-bg-color, 10%)
 $video-border-color: darken($accent-color, 5%)
+$conum-color: $accent-color
+$conum-bg-color: lighten($accent-color, 40%)
 $kbd-bg-color: #f7f7f7
 $kbd-border-color: #ccc
 $mark-bg-color: lighten($accent-color, 35%)
 $mark-bg-hover-color: lighten($accent-color, 10%)
+$hr-border-color: lighten($accent-color, 20%)
 $tip-bg-color: lighten($green, 45%)
 $tip-border-color: darken($tip-bg-color, 45%)
-$hr-border-color: lighten($accent-color, 20%)
+$important-bg-color: lighten($blue, 35%)
+$important-border-color: darken($important-bg-color, 10%)
+$warning-bg-color: lighten($yellow, 35%)
+$warning-border-color: darken($warning-bg-color, 10%)
+$caution-bg-color: lighten($red, 35%)
+$caution-border-color: darken($caution-bg-color, 10%)
 
 
 //
@@ -45,20 +56,28 @@ $code-bg-color-dark: lighten(black, 5%)
 $code-title-color-dark: $accent-color-dark
 $code-border-color-dark: darken($code-bg-color-dark, 10%)
 $video-border-color-dark: darken($accent-color-dark, 5%)
+$conum-color-dark: lighten($accent-color, 40%)
+$conum-bg-color-dark: darken($accent-color, 10%)
 $kbd-bg-color-dark: #f7f7f7
 $kbd-border-color-dark: #ccc
-$mark-bg-color-dark: lighten($accent-color-dark, 35%)
-$mark-bg-hover-color-dark: lighten($accent-color-dark, 10%)
-$tip-bg-color-dark: lighten($green, 45%)
-$tip-border-color-dark: darken($tip-bg-color-dark, 45%)
+$mark-bg-color-dark: lighten($accent-color-dark, 13%)
+$mark-bg-hover-color-dark: $accent-color-dark
 $hr-border-color-dark: lighten($accent-color-dark, 20%)
+$tip-bg-color-dark: darken($green, 10%)
+$tip-border-color-dark: darken($tip-bg-color-dark, 5%)
+$important-bg-color-dark: darken($blue, 0%)
+$important-border-color-dark: darken($important-bg-color-dark, 5%)
+$warning-bg-color-dark: $yellow
+$warning-border-color-dark: darken($warning-bg-color-dark, 5%)
+$caution-bg-color-dark: lighten($red, 10%)
+$caution-border-color-dark: darken($caution-bg-color-dark, 5%)
 
 :global(#sapper)
   background-color: white
 
-$colors: ( text-color: $text-color, accent-color: $accent-color, bg-color: $bg-color, gray-color: $gray-color, footer-bg-color: $footer-bg-color, footer-text-color: $footer-text-color, footer-border-color: $footer-border-color, code-bg-color: $code-bg-color, code-border-color: $code-border-color, code-title-color: $code-title-color, video-border-color: $video-border-color, kbd-bg-color: $kbd-bg-color, kbd-border-color: $kbd-border-color, mark-bg-color: $mark-bg-color, mark-bg-hover-color: $mark-bg-hover-color, tip-bg-color: $tip-bg-color, tip-border-color: $tip-border-color, hr-border-color: $hr-border-color)
+$colors: ( text-color: $text-color, accent-color: $accent-color, bg-color: $bg-color, gray-color: $gray-color, footer-bg-color: $footer-bg-color, footer-text-color: $footer-text-color, footer-border-color: $footer-border-color, code-bg-color: $code-bg-color, code-border-color: $code-border-color, code-title-color: $code-title-color, video-border-color: $video-border-color, kbd-bg-color: $kbd-bg-color, kbd-border-color: $kbd-border-color, mark-bg-color: $mark-bg-color, mark-bg-hover-color: $mark-bg-hover-color, tip-bg-color: $tip-bg-color, tip-border-color: $tip-border-color, important-bg-color: $important-bg-color, important-border-color: $important-border-color, warning-bg-color: $warning-bg-color, warning-border-color: $warning-border-color, caution-bg-color: $caution-bg-color, caution-border-color:$caution-border-color, hr-border-color: $hr-border-color, conum-bg-color: $conum-bg-color, conum-color: $conum-color)
 
-$colors-dark: ( text-color: $text-color-dark, accent-color: $accent-color-dark, bg-color: $bg-color-dark, gray-color: $gray-color-dark, footer-bg-color: $footer-bg-color-dark, footer-text-color: $footer-text-color-dark, footer-border-color: $footer-border-color-dark, code-bg-color: $code-bg-color-dark, code-border-color: $code-border-color-dark, code-title-color: $code-title-color-dark, video-border-color: $video-border-color-dark, kbd-bg-color: $kbd-bg-color-dark, kbd-border-color: $kbd-border-color-dark, mark-bg-color: $mark-bg-color-dark, mark-bg-hover-color: $mark-bg-hover-color-dark, tip-bg-color: $tip-bg-color-dark, tip-border-color: $tip-border-color-dark, hr-border-color: $hr-border-color-dark)
+$colors-dark: ( text-color: $text-color-dark, accent-color: $accent-color-dark, bg-color: $bg-color-dark, gray-color: $gray-color-dark, footer-bg-color: $footer-bg-color-dark, footer-text-color: $footer-text-color-dark, footer-border-color: $footer-border-color-dark, code-bg-color: $code-bg-color-dark, code-border-color: $code-border-color-dark, code-title-color: $code-title-color-dark, video-border-color: $video-border-color-dark, kbd-bg-color: $kbd-bg-color-dark, kbd-border-color: $kbd-border-color-dark, mark-bg-color: $mark-bg-color-dark, mark-bg-hover-color: $mark-bg-hover-color-dark, tip-bg-color: $tip-bg-color-dark, tip-border-color: $tip-border-color-dark, important-bg-color: $important-bg-color-dark, important-border-color: $important-border-color-dark, warning-bg-color: $warning-bg-color-dark, warning-border-color: $warning-border-color-dark, caution-bg-color: $caution-bg-color-dark, caution-border-color: $caution-border-color-dark, hr-border-color: $hr-border-color-dark, conum-bg-color: $conum-bg-color-dark, conum-color: $conum-color-dark)
 
 @function theme($color)
   @return var(--color-#{$color})
